[gd_scene load_steps=2 format=3 uid="uid://by8yiquglxilv"]

[ext_resource type="Script" path="res://weapons/projectile.gd" id="1_mii3l"]

[node name="Projectile" type="Area2D" groups=["weapons"]]
z_index = 1
collision_layer = 8
collision_mask = 4
monitorable = false
script = ExtResource("1_mii3l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
